--- a/styles/Todos.module.scss
+++ b/styles/Todos.module.scss
@@ -9,7 +9,7 @@
         width: 100%;
         margin-bottom: 1rem;
     }
-    &__input {
+    &__input-text {
         width: 100%;
         padding: 1rem;
         border-radius: 5px;
